log
Tue 18 Apr 2023 11:25:17 PM UTC: 
 tests:  1|8
total_score: 0/70
16282b1
Tue 18 Apr 2023 11:32:12 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  3|8
total_score: 0/70
f613b68
Tue 18 Apr 2023 11:34:11 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|7
total_score: 5/70
c22c1a2
Tue 18 Apr 2023 11:48:32 PM UTC: 
 treemap.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c:92:1: error: expected identifier or ‘(’ before ‘}’ token
   92 | }
      | ^
Compilation failed
6cc7470
Tue 18 Apr 2023 11:48:47 PM UTC: 
 treemap.c | 10 ----------
 1 file changed, 10 deletions(-)
 tests:  0|0
343d23f
Wed 19 Apr 2023 12:11:02 AM UTC: 
 treemap.c | 5 -----
 1 file changed, 5 deletions(-)
 tests:  4|7
total_score: 5/70
9bfa3fd
Thu 20 Apr 2023 04:22:33 PM UTC: 
 treemap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:80:54: error: expected ‘;’ before ‘if’
   80 |     resultado = is_equal(tree , aux->pair->key , key)
      |                                                      ^
      |                                                      ;
   81 |     if(resultado == 1){
      |     ~~                                                
treemap.c:76:7: error: variable ‘resultado’ set but not used [-Werror=unused-but-set-variable]
   76 |   int resultado;
      |       ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
606cb95
Thu 20 Apr 2023 04:26:22 PM UTC: 
 treemap.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
 tests:  4|7
total_score: 5/70
f72bd07
Thu 20 Apr 2023 04:27:37 PM UTC: 
 treemap.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
1ea80a2
Thu 20 Apr 2023 04:29:05 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:79:14: error: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘void *’ [-Werror=format=]
   79 |     printf("%d\n", aux->pair->key);
      |             ~^     ~~~~~~~~~~~~~~
      |              |              |
      |              int            void *
      |             %p
cc1: all warnings being treated as errors
Compilation failed
cb74aca
Thu 20 Apr 2023 04:29:12 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
90cc3e3
Thu 20 Apr 2023 04:29:44 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
d348eb1
Thu 20 Apr 2023 04:29:53 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|7
total_score: 5/70
fca007c
Thu 20 Apr 2023 04:30:37 PM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
8870777
Thu 20 Apr 2023 04:33:03 PM UTC: 
 treemap.c | 14 +++-----------
 1 file changed, 3 insertions(+), 11 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:87:1: error: control reaches end of non-void function [-Werror=return-type]
   87 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
295c3a8
